# shelfie

./: Cargo.toml  README.md
src/: ai_structs.rs  batch_processor.rs  concurrent_processor.rs  config.rs  database.rs  file_analyzer.rs  lib.rs  main.rs  models.rs  organizer.rs  plan_refiner.rs  providers.rs  utils.rs
src/batch_processor/: tests.rs
src/database/: tests.rs
src/file_analyzer/: tests.rs
test_dir/: doc123.txt  file1.txt  recipe.md
tests/: database_test.rs  file_analyzer_test.rs  integration_test.rs
