[package]
name = "fs-organiser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fs-organiser"
path = "src/main.rs"

[lib]
name = "fs_organiser"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
walkdir = "2"
base64 = "0.22"
pdf-extract = "0.9"
anyhow = "1"
dialoguer = "0.11"
colored = "3"
reqwest = { version = "0.12", features = ["json"] }
image = "0.25"
rig-core = "0.18.0"
indicatif = "0.18"
futures = "0.3"
tokio-stream = "0.1"
infer = "0.19"

[dev-dependencies]
tempfile = "3.0"
