[package]
name = "shelfie"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shelfie"
path = "src/main.rs"

[lib]
name = "shelfie"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
walkdir = "2"
anyhow = "1"
dialoguer = "0.11"
colored = "3"
reqwest = { version = "0.12", features = ["json"] }
rig-core = "0.18.2"
indicatif = "0.18"
futures = "0.3"
infer = "0.19"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = "0.4"
extractous = "0.3.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
httpmock = "0.7"
tokio-test = "0.4"
